--- a/CarCre/packages.config
+++ b/CarCre/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.jqGrid" version="4.4.4" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.10.0" targetFramework="net461" />
@@ -23,6 +24,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
