--- a/CarCre/packages.config
+++ b/CarCre/packages.config
@@ -6,6 +6,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
+  <package id="JqGrid" version="1.4.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.jqGrid" version="4.4.4" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.10.0" targetFramework="net461" />
