--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -199,6 +199,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CarCareDB.edmx</DependentUpon>
     </Compile>
+    <Compile Include="CarCareDatabase\ServiceRecord.cs">
+      <DependentUpon>CarCareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CarCareDatabase\ServiceStation.cs">
+      <DependentUpon>CarCareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CarCareDatabase\ServiceType.cs">
+      <DependentUpon>CarCareDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="CarCareDatabase\TuneUp.cs">
       <DependentUpon>CarCareDB.tt</DependentUpon>
     </Compile>
@@ -215,8 +224,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\Vehicle.cs" />
+    <Compile Include="Models\UserViewModel.cs" />
+    <Compile Include="Models\VehicleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unity\Bootstraper.cs" />
   </ItemGroup>
