--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -224,6 +224,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ServiceRecordViewModel.cs" />
+    <Compile Include="Models\ServiceStationViewModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Models\VehicleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
