Oil Change views

--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GoogleMapsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OilChangeController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -330,6 +331,9 @@
     <Content Include="CarCareDatabase\CarCareDB.edmx.diagram">
       <DependentUpon>CarCareDB.edmx</DependentUpon>
     </Content>
+    <Content Include="Views\OilChange\Index.cshtml" />
+    <Content Include="Views\OilChange\EditOilChange.cshtml" />
+    <Content Include="Views\OilChange\AddOilChange.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -451,7 +455,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\TireReplacement\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
