--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -334,6 +334,7 @@
     <Content Include="Views\OilChange\Index.cshtml" />
     <Content Include="Views\OilChange\EditOilChange.cshtml" />
     <Content Include="Views\OilChange\AddOilChange.cshtml" />
+    <Content Include="Views\Vehicle\AddNewVehicle.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
