--- a/CarCre/packages.config
+++ b/CarCre/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="DotNet.Highcharts" version="4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
   <package id="JqGrid" version="1.4.3" targetFramework="net461" />
