--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -386,6 +386,8 @@
     <Content Include="Views\TuneUp\EditTuneUp.cshtml" />
     <Content Include="Views\TuneUp\Index.cshtml" />
     <Content Include="Views\Shared\AddServiceRecord.cshtml" />
+    <Content Include="App_Code\MyHelpers.cshtml" />
+    <Content Include="Views\TireReplacement\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
