--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Controllers\OilChangeController.cs" />
     <Compile Include="Controllers\TuneUpController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
+    <Compile Include="Controllers\WinterizationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -388,6 +389,8 @@
     <Content Include="Views\Shared\AddServiceRecord.cshtml" />
     <Content Include="App_Code\MyHelpers.cshtml" />
     <Content Include="Views\TireReplacement\Index.cshtml" />
+    <Content Include="Views\Winterization\Index.cshtml" />
+    <Content Include="Views\TireReplacement\Test.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -509,6 +512,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\App_LocalResources\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
