--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Controllers\GoogleMapsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OilChangeController.cs" />
+    <Compile Include="Controllers\SumerizationController.cs" />
     <Compile Include="Controllers\TuneUpController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Controllers\WinterizationController.cs" />
@@ -390,7 +391,7 @@
     <Content Include="App_Code\MyHelpers.cshtml" />
     <Content Include="Views\TireReplacement\Index.cshtml" />
     <Content Include="Views\Winterization\Index.cshtml" />
-    <Content Include="Views\TireReplacement\Test.cshtml" />
+    <Content Include="Views\Sumerization\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -491,7 +492,6 @@
     <Content Include="Views\Vehicle\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
     <None Include="_bin_deployableAssemblies\x86\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
-    <Content Include="Views\TireReplacement\TireReplacement.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
