--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Controllers\GoogleMapsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OilChangeController.cs" />
+    <Compile Include="Controllers\RepairController.cs" />
     <Compile Include="Controllers\StateInspectionController.cs" />
     <Compile Include="Controllers\SumerizationController.cs" />
     <Compile Include="Controllers\TuneUpController.cs" />
@@ -406,6 +407,9 @@
     <Content Include="Views\StateInspection\AddStateInspection.cshtml" />
     <Content Include="Views\StateInspection\EditStateInspection.cshtml" />
     <Content Include="Views\StateInspection\Index.cshtml" />
+    <Content Include="Views\Repair\Index.cshtml" />
+    <Content Include="Views\Repair\AddRepair.cshtml" />
+    <Content Include="Views\Repair\EditRepair.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
