--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Controllers\LeaseController.cs" />
     <Compile Include="Controllers\OilChangeController.cs" />
     <Compile Include="Controllers\RepairController.cs" />
+    <Compile Include="Controllers\ServiceStationsController.cs" />
     <Compile Include="Controllers\StateInspectionController.cs" />
     <Compile Include="Controllers\SumerizationController.cs" />
     <Compile Include="Controllers\TuneUpController.cs" />
@@ -425,6 +426,9 @@
     <Content Include="Views\Lease\Index.cshtml" />
     <Content Include="Views\Lease\AddLease.cshtml" />
     <Content Include="Views\Lease\EditLease.cshtml" />
+    <Content Include="Views\ServiceStations\AddNewServiceStation.cshtml" />
+    <Content Include="Views\ServiceStations\EditServiceStation.cshtml" />
+    <Content Include="Views\ServiceStations\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
