fixed bugs found in add and edit operations to repair, lease, insurance and warranty

--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -234,6 +234,9 @@
     <Compile Include="CarCareDatabase\Vehicle.cs">
       <DependentUpon>CarCareDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="CarCareDatabase\VehicleSummary.cs">
+      <DependentUpon>CarCareDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="CarCareDatabase\Warranty.cs">
       <DependentUpon>CarCareDB.tt</DependentUpon>
     </Compile>
