--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -428,6 +428,7 @@
     <Content Include="Views\ServiceStations\AddNewServiceStation.cshtml" />
     <Content Include="Views\ServiceStations\EditServiceStation.cshtml" />
     <Content Include="Views\ServiceStations\Index.cshtml" />
+    <Content Include="Views\SavedPlaces.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
