--- a/CarCre/CarCare.csproj
+++ b/CarCre/CarCare.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Controllers\SumerizationController.cs" />
     <Compile Include="Controllers\TuneUpController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
+    <Compile Include="Controllers\VehicleSummaryController.cs" />
     <Compile Include="Controllers\WarrantyController.cs" />
     <Compile Include="Controllers\WinterizationController.cs" />
     <Compile Include="Global.asax.cs">
@@ -265,6 +266,7 @@
     <Compile Include="Models\ServiceRecordViewModel.cs" />
     <Compile Include="Models\ServiceStationViewModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
+    <Compile Include="Models\VehicleSummaryViewModel.cs" />
     <Compile Include="Models\VehicleViewModel.cs" />
     <Compile Include="Models\WarrantyViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -428,6 +430,8 @@
     <Content Include="Views\ServiceStations\EditServiceStation.cshtml" />
     <Content Include="Views\ServiceStations\Index.cshtml" />
     <Content Include="Views\SavedPlaces.cshtml" />
+    <Content Include="Views\Index.cshtml" />
+    <Content Include="Views\VehicleSummary\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
